[package]
name = "cozy-chess"
version = "0.1.3"
authors = ["analog-hors <44050761+analog-hors@users.noreply.github.com>"]
edition = "2021"
build = "src/build.rs"

license = "MIT"
description = "Rust Chess and Chess960 move generation library"
homepage = "https://github.com/analog-hors/cozy-chess/"
repository = "https://github.com/analog-hors/cozy-chess/"
keywords = ["chess"]
readme = "../README.md"

[dependencies]
cozy-chess-types = { path = "../types", version = "0.1" }

[build-dependencies]
cozy-chess-types = { path = "../types", version = "0.1" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "perft"
harness = false
