[package]
name = "cozy-chess"
version = "0.3.0"
authors = ["analog-hors <44050761+analog-hors@users.noreply.github.com>"]
edition = "2021"

license = "MIT"
description = "Rust Chess and Chess960 move generation library"
homepage = "https://github.com/analog-hors/cozy-chess/"
repository = "https://github.com/analog-hors/cozy-chess/"
keywords = ["chess", "no_std"]
readme = "../README.md"
categories = ["games", "no-std"]

[dependencies]
cozy-chess-types = { path = "../types", version = "0.2.0" }

[build-dependencies]
cozy-chess-types = { path = "../types", version = "0.2.0" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "legals"
harness = false

[[bench]]
name = "move_fns"
harness = false

[features]
std = ["cozy-chess-types/std"]
pext = ["cozy-chess-types/pext"]
