[package]
name = "cozy-chess-types"
version = "0.1.1"
authors = ["analog-hors <44050761+analog-hors@users.noreply.github.com>"]
edition = "2018"

license = "MIT"
description = "Do not use! Internal library for cozy-chess."
homepage = "https://github.com/analog-hors/cozy-chess/"
repository = "https://github.com/analog-hors/cozy-chess/"

[dependencies]
