[package]
name = "cozy-chess-types"
version = "0.2.0"
authors = ["analog-hors <44050761+analog-hors@users.noreply.github.com>"]
edition = "2021"

license = "MIT"
description = "Do not use! Internal library for cozy-chess."
homepage = "https://github.com/analog-hors/cozy-chess/"
repository = "https://github.com/analog-hors/cozy-chess/"

[dependencies]

[features]
bmi2 = []
